--- a/GCUrefined/nbproject/project.properties
+++ b/GCUrefined/nbproject/project.properties
@@ -63,6 +63,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mysql-connector-java-5.1.48.jar=../../Downloads/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
